<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_1"
        tools:context=".FirstFragment">

    <TextView
            android:id="@+id/textview_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textStyle="bold"
            android:text="@string/hello_first_fragment"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/not_scrol"
    />
    <ScrollView
            android:id="@+id/not_scrol"
            android:layout_marginTop="70dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="70dp">
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:isScrollContainer="true">
            <TableLayout
                    android:layout_marginTop="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:stretchColumns="1,2,3"
                    android:id="@+id/notification"
                    app:layout_constraintTop_toTopOf="parent">

                <TableRow android:visibility="visible"
                          android:background="@drawable/border"
                          android:id="@+id/column_name">
                    <TextView
                            android:id="@+id/checkbox_item"
                            android:text="@string/notification_check"
                            android:layout_height="match_parent"
                            android:layout_width="match_parent"
                            android:layout_weight="0.1"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:paddingStart="20dp"
                            android:paddingEnd="10dp"/>
                    <TextView
                            android:id="@+id/name"
                            android:text="@string/notification_title"
                            android:layout_height="match_parent"
                            android:layout_width="match_parent"
                            android:layout_weight="0.3"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:paddingStart="20dp"
                            android:paddingEnd="10dp"/>
                    <TextView
                            android:id="@+id/score"
                            android:text="@string/notification_text"
                            android:layout_height="match_parent"
                            android:layout_width="match_parent"
                            android:layout_weight="0.3"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:paddingStart="20dp"
                            android:paddingEnd="10dp"/>
                    <TextView
                            android:id="@+id/date"
                            android:text="@string/notification_date"
                            android:layout_height="match_parent"
                            android:layout_width="match_parent"
                            android:layout_weight="0.3"
                            android:textAlignment="center"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:paddingStart="20dp"
                            android:paddingEnd="10dp"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

    <Button
            android:id="@+id/button_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />
    <Button
            android:id="@+id/button_first_delele"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_all"
            android:layout_marginLeft="150dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />
</androidx.constraintlayout.widget.ConstraintLayout>